# libFAUDES

./: .gitignore  AUTHORS  CHANGES  COPYING  LICENSE  Makefile  Makefile.tutorial  README.md  VERSION  msvcbuild.bat  msvcbuild.iss  msvcdist.bat  msvcdist.iss  msvcreadme.md  touch
.github/workflows/: build_lx.yml  build_msvc.yml  build_msys.yaml  build_msys.yml  build_osx.yml  build_tests.yml  build_wheels.yml  c-cpp.yml
plugins/coordinationcontrol/: Makefile.plugin  Makefile.tutorial
plugins/diagnosis/: Makefile.plugin  Makefile.tutorial  TODO
plugins/example/: Makefile.plugin  Makefile.tutorial  README
plugins/hiosys/: CHANGES  Makefile.plugin  Makefile.tutorial  VERSION
plugins/hybrid/: Makefile.plugin  (+1 more)
plugins/pybindings/src/: MANIFEST.in  fixversion.pl  fixversion.py  pbp_addons.cpp  pbp_addons.h  pbp_addons.py  pbp_include.h  pyproject.toml  setup.py  test_all.py
plugins/pybindings/src/doxygen/: faudes_pythonfnct.fref  faudes_pythonmod.fref  faudes_pythonobj.fref
src/: TAR_EXCLUDES  allplugins.h.template  cfl_agenerator.cpp  cfl_agenerator.h  cfl_attributes.cpp  cfl_attributes.h  cfl_attrmap.cpp  cfl_attrmap.h  cfl_baseset.cpp  cfl_baseset.h  cfl_basevector.cpp  cfl_basevector.h  cfl_bisimcta.cpp  cfl_bisimcta.h  cfl_bisimulation.cpp  cfl_bisimulation.cpp_alt  cfl_bisimulation.cpp_dist  cfl_cgenerator.cpp  cfl_cgenerator.h  cfl_conflequiv.cpp  cfl_conflequiv.h  cfl_definitions.h  cfl_determin.cpp  cfl_elementary.cpp  cfl_elementary.h  cfl_exception.cpp  cfl_exception.h  cfl_functions.cpp  cfl_functions.h  cfl_generator.cpp  cfl_generator.h  cfl_graphfncts.cpp  cfl_helper.cpp  cfl_indexset.cpp  cfl_indexset.h  cfl_localgen.cpp  cfl_nameset.cpp  cfl_nameset.h  cfl_omega.cpp  cfl_parallel.cpp  (+33 more)
stdflx/: ftccontrol.flx  ftcontrol.flx
tools/: README
tutorial/: 1_generator.cpp  2_containers.cpp  3_functions.cpp  4_cgenerator.cpp  5_attributes.cpp  6_algorithm.cpp  7_interface.cpp  create_images.sh  perfloop.cpp
(+2271 files in other folders)
