[project]
name = "faudes"
dynamic = ["version"]
keywords = ["supervisory control"]
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/FGDES/libFAUDES"
Homepage = "https://fgdes.tf.fau.de/faudes"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.cibuildwheel]
before-all = "uname -a"
archs = ["auto"]
build = "cp3*"
build-frontend = "build"




